...
        <item>Register your card details for faster checkout</item>
    </string-array>

    <!-- MainActivity -->
    <string name="customer">Customer</string>
    <string name="Agent">Agent</string>
    <string name="internet_error">Please check your internet connection and try again.</string>
    <string name="logout">Logout</string>

    <!-- CustomerRegistrationActivity -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_upload">Sign Up - Upload</string>
    <string name="firstname">First Name</string>
...
    <string name="sixty_seven_percent">67%</string>
    <string name="seventy_five_percent">75%</string>
    <string name="hundred_percent">100%</string>
    <string name="first_name_empty_error">Please enter your first name</string>
    <string name="last_name_empty_error">Please enter your last name</string>
    <string name="other_names_empty_error">Please enter your other names</string>
    <string name="password_empty_error">Please enter your password</string>
    <string name="email_empty_error">Please enter your email address</string>
    <string name="email_invalid_error">Please enter a valid email address</string>
    <string name="phone_number_empty_error">Please enter your phone number</string>

    <string name="credit_card_number">Credit Card Number</string>
    <string name="month">Month</string>
...
